fix(monaco): align css logical properties

--- a/projects/monaco/src/internal/formats/problems-format.css
+++ b/projects/monaco/src/internal/formats/problems-format.css
@@ -31,7 +31,7 @@
   }
 
   &.problem-file {
-    padding-left: 6px;
+    padding-inline-start: var(--nve-ref-size-150);
   }
 
   &.problem-path {
@@ -41,6 +41,7 @@
 
   &.problem-count {
     background-color: var(--nve-ref-color-gray-denim-800);
+    /* stylelint-disable-next-line declaration-property-value-disallowed-list */
     padding: 1.2px 6px;
     border-radius: var(--nve-ref-border-radius-md);
     font-family: var(--nve-ref-font-family);
